changes made