@@ -9,5 +9,5 @@ COPY --from=build /service/target/sesam-db2-source-1.0-SNAPSHOT.jar /opt/sesam-d
 # RUN echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf 
 
 ENTRYPOINT ["java"]
-CMD ["-XX:MinRAMPercentage=50", "-XX:MaxRAMPercentage=80", "-XshowSettings:vm", "-XX:+UnlockExperimentalVMOptions",  "-XX:+UseZGC", "-Xms500M", "-jar", "/opt/sesam-db2-source-1.0-SNAPSHOT.jar", "-Xlog:gc:gc.log"]
+CMD ["-XX:MinRAMPercentage=60", "-XX:MaxRAMPercentage=80", "-XshowSettings:vm", "-XX:+UseContainerSupport", "-jar", "/opt/sesam-db2-source-1.0-SNAPSHOT.jar"]
 EXPOSE 8080:8080
